force-app/main/default/objects/OCE__MeetingExpense__c/OCE__MeetingExpense__c.object-meta.xml
<CustomObject>
    <description>The Meeting Expense object is used to track expenses related to meetings.</description>
    <label>Meeting Expense</label>
    <nameField>
        <displayFormat>EX-{000000}</displayFormat>
        <label>Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Expenses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>