force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Amount__c.field-meta.xml
<CustomField>
    <fullName>OCE__Amount__c</fullName>
    <description>The amount being recorded for the Meeting Expense.</description>
    <inlineHelpText>The amount being recorded for the Meeting Expense.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>