force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Budget__c.field-meta.xml
<CustomField>
    <fullName>OCE__Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. The name of the budget.</description>
    <inlineHelpText>The name of the budget.</inlineHelpText>
    <label>DEPRECATED Budget</label>
    <referenceTo>OCE__Budget__c</referenceTo>
    <relationshipLabel>Meeting Expenses</relationshipLabel>
    <relationshipName>MeetingExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>