force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Category__c.field-meta.xml
<CustomField>
    <fullName>OCE__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The category the Meeting Expense falls under.</description>
    <inlineHelpText>The category the Meeting Expense falls under.</inlineHelpText>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__ExpenseType__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__ExpenseType__c</referenceTo>
    <relationshipLabel>Meeting Expenses</relationshipLabel>
    <relationshipName>Meeting_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>