force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Comments__c.field-meta.xml
<CustomField>
    <fullName>OCE__Comments__c</fullName>
    <description>Comments about the Meeting Expense.</description>
    <inlineHelpText>Comments about the Meeting Expense.</inlineHelpText>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>