force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__DateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__DateTime__c</fullName>
    <description>The date/time of the Meeting Expense.</description>
    <inlineHelpText>The date/time of the Meeting Expense.</inlineHelpText>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>