force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__DiscrepancyReasonEstimates__c.field-meta.xml
<CustomField>
    <fullName>OCE__DiscrepancyReasonEstimates__c</fullName>
    <description>Reason of the failure that occurred during rollup process of estimated spend into Meeting Expense</description>
    <inlineHelpText>Reason of the failure that occurred during rollup process of estimated spend into Meeting Expense</inlineHelpText>
    <label>Discrepancy Reason for Estimates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>