force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__EstimatedAmountForActuals__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedAmountForActuals__c</fullName>
    <description>Total Amount of related Estimated Meeting Expense</description>
    <inlineHelpText>Total Amount of related Estimated Meeting Expense</inlineHelpText>
    <label>Estimated Amount for Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>