force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__EstimatedMeetingExpense__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedMeetingExpense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Estimated Meeting Expense</description>
    <inlineHelpText>Related Estimated Meeting Expense</inlineHelpText>
    <label>Estimated Meeting Expense</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__MeetingExpense__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Estimate</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>OCE__MeetingExpense__c</referenceTo>
    <relationshipLabel>Meeting Expenses</relationshipLabel>
    <relationshipName>MeetingExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>