force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__EstimatedTaxAmountForActuals__c.field-meta.xml
<CustomField>
    <fullName>OCE__EstimatedTaxAmountForActuals__c</fullName>
    <description>Tax Amount of related Estimated Meeting Expense</description>
    <inlineHelpText>Tax Amount of related Estimated Meeting Expense</inlineHelpText>
    <label>Estimated Tax Amount for Actuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>