force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__ExpenseReceiptInformation__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExpenseReceiptInformation__c</fullName>
    <description>JSON with information about attached Expense Receipt from external system.</description>
    <inlineHelpText>JSON with information about attached Expense Receipt from external system.</inlineHelpText>
    <label>Expense Receipt Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>