force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__ExpenseReportApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExpenseReportApprovalStatus__c</fullName>
    <description>Approval Status of Expense Report from external system.</description>
    <label>Expense Report Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A_AAFH</fullName>
                <label>Anomaly and fraud check</label>
            </value>
            <value>
                <fullName>A_ACCO</fullName>
                <label>Pending reviews</label>
            </value>
            <value>
                <fullName>A_APPR</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>A_EXTV</fullName>
                <label>Pending external validation</label>
            </value>
            <value>
                <fullName>A_FILE</fullName>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>A_NOTF</fullName>
                <label>Not submitted</label>
            </value>
            <value>
                <fullName>A_PBDG</fullName>
                <label>Pending Budget approval</label>
            </value>
            <value>
                <fullName>A_PECO</fullName>
                <label>Pending Cost object approval</label>
            </value>
            <value>
                <fullName>A_PEND</fullName>
                <label>Pending manager approval</label>
            </value>
            <value>
                <fullName>A_PVAL</fullName>
                <label>Pending prepayment validation</label>
            </value>
            <value>
                <fullName>A_RESU</fullName>
                <label>Needs to be resubmitted</label>
            </value>
            <value>
                <fullName>A_RHLD</fullName>
                <label>Pending receipt images</label>
            </value>
            <value>
                <fullName>A_TEXP</fullName>
                <label>Expired in approval queue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>