force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__ExpenseReportInformation__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExpenseReportInformation__c</fullName>
    <description>JSON with information about Expense Report from external system.</description>
    <label>Expense Report Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>