force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__ExternalExpenseReportID__c.field-meta.xml
<CustomField>
    <fullName>OCE__ExternalExpenseReportID__c</fullName>
    <description>ID of Expense Report from external system.</description>
    <externalId>true</externalId>
    <label>External Expense Report ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>