force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__IntegrationError__c.field-meta.xml
<CustomField>
    <fullName>OCE__IntegrationError__c</fullName>
    <description>Displays any errors that occurred when integrating with external system.</description>
    <label>Integration Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>