force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__IntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__IntegrationStatus__c</fullName>
    <description>Status of integration with external system.</description>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Failed to Send</fullName>
            </value>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>