force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Invoice__c.field-meta.xml
<CustomField>
    <fullName>OCE__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice related to Meeting Expense</description>
    <inlineHelpText>Invoice related to Meeting Expense</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>OCE__Invoice__c</referenceTo>
    <relationshipLabel>Meeting Expenses</relationshipLabel>
    <relationshipName>MeetingExpenses</relationshipName>
    <type>Lookup</type>
</CustomField>