force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__IsAutoGenerated__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsAutoGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Auto Generated</description>
    <label>Is Auto Generated</label>
    <type>Checkbox</type>
</CustomField>