force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__LineItem__c.field-meta.xml
<CustomField>
    <fullName>OCE__LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The line item related to the Meeting Expense.</description>
    <inlineHelpText>The line item related to the Meeting Expense.</inlineHelpText>
    <label>Line Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OCE__ExpenseType__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>LineItem</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OCE__ExpenseType__c</referenceTo>
    <relationshipLabel>Meeting Expenses (Line Item)</relationshipLabel>
    <relationshipName>MeetingExpenses1</relationshipName>
    <type>Lookup</type>
</CustomField>