force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__LogisticsEstimateAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__LogisticsEstimateAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lookup rollup field for calculating total Meeting Logistics Estimated Amount</description>
    <label>Logistics Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>