force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Meeting__c.field-meta.xml
<CustomField>
    <fullName>OCE__Meeting__c</fullName>
    <description>The meeting that the Meeting Expense is related to.</description>
    <inlineHelpText>The meeting that the Meeting Expense is related to.</inlineHelpText>
    <label>Meeting</label>
    <referenceTo>OCE__Meeting__c</referenceTo>
    <relationshipLabel>Meeting Expenses</relationshipLabel>
    <relationshipName>MeetingExpenses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>