force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__MeetingDetailsEstimateAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__MeetingDetailsEstimateAmount__c</fullName>
    <description>Lookup rollup field for calculating total Meeting Details Estimated Amount</description>
    <inlineHelpText>Lookup rollup field for calculating total Meeting Details Estimated Amount</inlineHelpText>
    <label>Meeting Details Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>