force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__MMLogisticsEstimateAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__MMLogisticsEstimateAmount__c</fullName>
    <description>Total amount from related Meeting Member Logistics records</description>
    <label>MML Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>