force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__MMLTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__MMLTaxAmount__c</fullName>
    <description>Tax amount rolled of from related MML lines</description>
    <label>MML Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>