force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__MMSEstimatedAmountTax__c.field-meta.xml
<CustomField>
    <fullName>OCE__MMSEstimatedAmountTax__c</fullName>
    <description>Tax amount rolled of from related MMS lines</description>
    <label>MMS Estimated Amount Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>