force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__NoOfAllocations__c.field-meta.xml
<CustomField>
    <fullName>OCE__NoOfAllocations__c</fullName>
    <description>Records the number of Meeting Expense Allocations related to the Meeting Expense.</description>
    <inlineHelpText>Records the number of Meeting Expense Allocations related to the Meeting Expense.</inlineHelpText>
    <label>No. of Allocations</label>
    <summaryForeignKey>OCE__MeetingExpenseAllocation__c.OCE__MeetingExpense__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>