force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the User who created this record offline</description>
    <inlineHelpText>ID of the User who created this record offline</inlineHelpText>
    <label>Offline Created By ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MeetingExpense1</relationshipName>
    <type>Lookup</type>
</CustomField>