force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Paid__c.field-meta.xml
<CustomField>
    <fullName>OCE__Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Meeting Expense is paid for or not.</description>
    <inlineHelpText>Determines if the Meeting Expense is paid for or not.</inlineHelpText>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>