force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__PaidBy__c.field-meta.xml
<CustomField>
    <fullName>OCE__PaidBy__c</fullName>
    <description>Stores whom is paying for the Meeting Expense.</description>
    <inlineHelpText>Stores whom is paying for the Meeting Expense.</inlineHelpText>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rep</fullName>
                <default>true</default>
                <label>Rep</label>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>HO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>