force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__PaymentDate__c</fullName>
    <description>Date the payment was sent.</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>