force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>OCE__PaymentMethod__c</fullName>
    <description>Determines the payment method for the Meeting Expense.</description>
    <inlineHelpText>Determines the payment method for the Meeting Expense.</inlineHelpText>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>