force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__PaymentTypeID__c.field-meta.xml
<CustomField>
    <fullName>OCE__PaymentTypeID__c</fullName>
    <description>ID of Payment Type from external system.</description>
    <formula>OCE__LineItem__r.OCE__PaymentTypeID__c</formula>
    <inlineHelpText>ID of Payment Type from external system</inlineHelpText>
    <label>Payment Type ID</label>
    <type>Text</type>
</CustomField>