force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__ProductEstimateAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__ProductEstimateAmount__c</fullName>
    <description>Lookup rollup field for calculating total Meeting Product Estimated Amount</description>
    <inlineHelpText>Lookup rollup field for calculating total Meeting Product Estimated Amount</inlineHelpText>
    <label>Product Estimate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>