force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Supplier__c.field-meta.xml
<CustomField>
    <fullName>OCE__Supplier__c</fullName>
    <description>The supplier on the Meeting Expense.</description>
    <inlineHelpText>The supplier on the Meeting Expense.</inlineHelpText>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>