force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>OCE__TaxAmount__c</fullName>
    <description>Tax amount for the expense.</description>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>