force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__Territory__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territory__c</fullName>
    <description>The territory related to the Meeting Expense.</description>
    <inlineHelpText>The territory related to the Meeting Expense.</inlineHelpText>
    <label>Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>