force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__TypeCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__TypeCode__c</fullName>
    <description>The financial system code for the Meeting.</description>
    <formula>OCE__LineItem__r.OCE__TypeCode__c</formula>
    <inlineHelpText>The financial system code for the Meeting</inlineHelpText>
    <label>Type Code</label>
    <type>Text</type>
</CustomField>