force-app/main/default/objects/OCE__MeetingExpense__c/fields/OCE__UnevenAllocation__c.field-meta.xml
<CustomField>
    <fullName>OCE__UnevenAllocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines how the Meeting Expense is allocated. If the checkbox is true, it was allocated unevenly. If the checkbox is false, it was allocated evenly.</description>
    <inlineHelpText>Determines how the Meeting Expense is allocated. If the checkbox is true, it was allocated unevenly. If the checkbox is false, it was allocated evenly.</inlineHelpText>
    <label>Uneven Allocation</label>
    <type>Checkbox</type>
</CustomField>