force-app/main/default/objects/OCE__MeetingExpense__c/recordTypes/OCE__Actual.recordType-meta.xml
<RecordType>
    <fullName>OCE__Actual</fullName>
    <active>true</active>
    <description>An actual expense</description>
    <label>Actual</label>
</RecordType>