force-app/main/default/objects/OCE__MeetingExpense__c/recordTypes/OCE__Estimate.recordType-meta.xml
<RecordType>
    <fullName>OCE__Estimate</fullName>
    <active>true</active>
    <label>Estimate</label>
</RecordType>