force-app/main/default/objects/OCE__MeetingExpense__c/validationRules/OCE__Forbid_changing_the_currency.validationRule-meta.xml
<ValidationRule>
    <fullName>OCE__Forbid_changing_the_currency</fullName>
    <active>false</active>
    <description>After the record has been created it is forbidden to change the currency.</description>
    <errorConditionFormula>ISCHANGED( CurrencyIsoCode )</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>You cannot change the Currency.</errorMessage>
</ValidationRule>